Translate + Netlify updated

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 					<i class="ri-close-line"></i>
 				</div>
 			</ul>
+			<div id="google_translate_element"></div>
 			<a href="https://discord.gg/pXaNHAbz2E" class="cta-btn" target="_blank">
 				<span>Join Our Discord</span>
 			</a>
