--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 	<title>Bay Breeze Guild - Top Heroes</title>
 	<link rel="icon" type="image/x-icon" href="img/Bay Breeze.webp">
 
+	<!-- Meta Data for SEO & Social Sharing -->
 	<meta name="description"
 		content="An unofficial, fan-made resource for Top Heroes. Access powerful calculators, in-depth guides, and strategies created by players, for players.">
 	<meta name="author" content="Bay Breeze Guild">
 	<meta name="msapplication-TileColor" content="#14eaf9">
 	<meta name="theme-color" content="#14eaf9">
 
+	<!-- Open Graph (OG) Meta Tags -->
 	<meta property="og:title" content="Bay Breeze Guild - Tools & Resources for Top Heroes" />
 	<meta property="og:description"
 		content="Fan-made resource with powerful calculators, in-depth guides, and strategies to master the game." />
@@ -24,6 +26,7 @@
 	<meta property="og:image:height" content="630" />
 	<meta property="og:site_name" content="Bay Breeze Guild" />
 
+	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:title" content="Bay Breeze Guild - Tools & Resources for Top Heroes">
 	<meta name="twitter:description"
 		content="Fan-made resource with powerful calculators, in-depth guides, and strategies to master the game.">
@@ -84,7 +87,7 @@
 				</li>
 				<li><a href="resources.html">Resources</a></li>
 				<li><a href="hr-report.html">Report to HR</a></li>
-				<li id="google_translate_element"></li>
+
 				<div class="nav-close" id="nav-close">
 					<i class="ri-close-line"></i>
 				</div>
@@ -92,6 +95,7 @@
 			<a href="https://discord.gg/pXaNHAbz2E" class="cta-btn" target="_blank">
 				<span>Join Our Discord</span>
 			</a>
+
 			<div class="nav-toggle" id="nav-toggle">
 				<i class="ri-menu-line"></i>
 			</div>
